Fix password string output overflow

--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -31,7 +31,7 @@ $title-font: "Poppins", sans-serif;
 }
 
 .card-title,
-.card-output-text,
+.card-output,
 .card-button-container,
 .card-button {
   display: flex;
