--- a/sass/_mediaqueries.scss
+++ b/sass/_mediaqueries.scss
@@ -6,9 +6,11 @@
 @media (min-width: 320px) and (max-width: 768px) {
   .card {
     height: 100vh;
-		width: 100vh;
-		// background: cyan !important;
-  }
+		width: 100vw;
+		&-output {
+			background: blue !important;
+		}
+	}
 }
 
 /* 
@@ -37,12 +39,6 @@
 		&-output {
 			grid-column: 1/3;
 			grid-row: 2/3;
-
-			&-text {
-				p#password-output {
-					max-width: 480px;
-				}
-			}
 		}
 
 		&-include-lowercase {
